--- a/TM Jimmy/challenge/challenge.html
+++ b/TM Jimmy/challenge/challenge.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="challenge.js"></script>
+<h1>ATM</h1>
+<label for="wish">Enteer the amount you need</label>
+<input type="text" name="" id="Amount">
+<button onclick="ATM()">Click</button>
+
+<p>100$ x </p>
+<p id="ote100"></p>
+<p>50$ x</p>
+<p id="ote50"></p>
+<p>20 x </p>
+<p id="ote20"></p>
+<p>10 $ </p>
+<p id="ote10"></p>
+
+
+
+    <script src="neue challenge.js"></script>
 </body>
 </html>
