new functions added

--- a/TM Jimmy/challenge/challenge.html
+++ b/TM Jimmy/challenge/challenge.html
@@ -12,6 +12,9 @@
 <input type="text" name="" id="Amount">
 <button onclick="ATM()">Click</button>
 
+<p id="check2"></p>
+<p id="check"></p>
+
 <p>100$ x </p>
 <p id="ote100"></p>
 <p>50$ x</p>
